--- a/src/client/index.html
+++ b/src/client/index.html
@@ -19,8 +19,8 @@
             <input id="chatInput" type="text" class="chat-input" placeholder="Chat here..." maxlength="35" />
         </div>
         <div id="mobile">
-           <input type="image" id="split" class="split" src="img/split.png" alt="splitBtn">
-           <input type="image" id="feed" class="feed" src="img/feed.png" alt="feedBtn">
+           <!-- <input type="image" id="split" class="split" src="img/split.png" alt="splitBtn">
+           <input type="image" id="feed" class="feed" src="img/feed.png" alt="feedBtn"> -->
         </div>
         <canvas tabindex="1" id="cvs"></canvas>
     </div>
